# rs_player

./: Cargo.toml
src/: input.rs  lib.rs  main.rs  output.rs
src/log/: mod.rs
src/stream/: input.rs  mod.rs  output.rs
src/ui/: events.rs  mod.rs
