[package]
name = "analogic_player"
version = "0.1.0"
authors = ["Charlie Boutier <charlie@tempow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0.12"
cpal = "0.13.1"
ringbuf = "0.2"
tui = "0.14.0"
termion = "1.5.5"
tokio = { version = "*", features = ["full"] }